--- a/gradle/plugin-spring-boot-config.gradle
+++ b/gradle/plugin-spring-boot-config.gradle
@@ -1,4 +1,6 @@
-// Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
-springBoot {
-    buildInfo()
+if (project.tasks.findByName("bootJar")) {
+    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
+    springBoot {
+        buildInfo()
+    }
 }
