--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -35,7 +35,7 @@ configurations {
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RC2")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:FINCHLEY.RELEASE")
     }
 }
 
