--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -28,7 +28,7 @@ subprojects {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RC2")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:FINCHLEY.RELEASE")
         }
     }
 
