--- a/thule-configuration-service/build.gradle
+++ b/thule-configuration-service/build.gradle
@@ -61,7 +61,7 @@ task processResourcesFromMicroServices {
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:FINCHLEY.RELEASE")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RELEASE")
     }
 }
 
