Upgraded com.palantir.docker:com.palantir.docker.gradle.plugin [0.20.0 -> 0.20.1]

--- a/gradle/build-dtest-config.gradle
+++ b/gradle/build-dtest-config.gradle
@@ -17,6 +17,6 @@ task dtest(type: Test) {
         dependsOn tasks.docker
     }
 
-    // Should run after the contract tests
+    // Should run after the docker tests
     shouldRunAfter tasks.ctest
 }
