--- a/gradle/plugin-docker-config.gradle
+++ b/gradle/plugin-docker-config.gradle
@@ -26,7 +26,7 @@ if (project.tasks.findByName("docker")) {
                     break
             }
 
-            dockerImageName = "$nexusHost:$dockerRegistryPort/${jar.baseName}:${project.version}"
+            dockerImageName = "$nexusHost:$dockerRegistryPort/${jar.baseName}"
         }
 
         // Configure docker plugin
@@ -36,23 +36,11 @@ if (project.tasks.findByName("docker")) {
             buildArgs(["JAR_FILE": "${jar.archiveName}"])
             files jar.archivePath, "src/main/docker/docker-entrypoint.sh"
             pull true
+            tags "${project.version}"
 
             tasks.docker.dependsOn bootJar
             tasks.docker.shouldRunAfter test, itest, ctest
             assemble.dependsOn tasks.docker
-        }
-
-        // The docker plugin should be able to tag an image but fails to do so due to bug https://github.com/palantir/gradle-docker/issues/139
-        // This task is a workaround whereby we tag it ourselves.
-        task dockerTag(dependsOn: tasks.docker) {
-            tasks.docker.finalizedBy dockerTag
-
-            doLast {
-                exec {
-                    // Tag as the "latest", i.e. the default tag when no explicit tag is specified
-                    commandLine "docker", "tag", "$dockerImageName", "${jar.baseName}"
-                }
-            }
         }
 
         // Ensure the docker image is pushed to the docker registry whenever we publish
@@ -63,7 +51,7 @@ if (project.tasks.findByName("docker")) {
 // Create a docker volume containing the config for config projects
 if ("$project.name".endsWith("-config")) {
     jar {
-        // Build Docker volume containing the spring boot configuration (used by container tests)
+        // Build Docker volume containing the spring boot configuration (used by docker tests)
         doLast {
             // Delete the volume from a previous build
             exec {
