Moved docker tests from ctest to dtest

--- a/thule-admin-server/src/dtest/resources/config/application.yml
+++ b/thule-admin-server/src/dtest/resources/config/application.yml
@@ -1,11 +1,6 @@
-# Eureka configuration
-eureka:
-  client:
-    enabled: false
-
 # Thule configuration
 thule:
-  adminserver:
+  adminservice:
     api:
       host: localhost
       port: 9092
