Refactored thule-admin-server to thule-admin

--- a/thule-admin/thule-admin-service/src/dtest/docker/thule-admin-docker-tests/docker-compose.yml
+++ b/thule-admin/thule-admin-service/src/dtest/docker/thule-admin-docker-tests/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   thule-admin-service:
     image: pooh:8084/thule-admin-service
     environment:
-      TZ: UTC
+      TZ: Europe/London
     ports:
       - 9092:8080 # Required to allow docker tests to call the restful api
     volumes:
