--- a/thule-discovery/build.gradle
+++ b/thule-discovery/build.gradle
@@ -52,6 +52,7 @@ project("thule-discovery-service") {
 
     dependencies {
         compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-web")
         compile("org.springframework.cloud:spring-cloud-starter-config")
