--- a/thule-email/build.gradle
+++ b/thule-email/build.gradle
@@ -12,8 +12,8 @@ plugins {
     id "org.springframework.boot" version "2.0.3.RELEASE" apply(false)
 }
 
-project("thule-gateway-config") {
-    description = "Thule Gateway Config"
+project("thule-email-config") {
+    description = "Thule Email Config"
 
     // Plugins
     apply plugin: "java"
@@ -25,8 +25,8 @@ project("thule-gateway-config") {
     // Non-standard Thule gradle plugin config
 }
 
-project("thule-gateway-service") {
-    description = "Thule Gateway Service"
+project("thule-email-service") {
+    description = "Thule Email Service"
 
     // Plugins
     apply plugin: "com.github.ben-manes.versions"
@@ -52,23 +52,24 @@ project("thule-gateway-service") {
 
     dependencies {
         compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
         compile("org.springframework.boot:spring-boot-starter-actuator")
+        compile("org.springframework.boot:spring-boot-starter-mail")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
-        compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
         compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile("org.springframework.cloud:spring-cloud-starter-zipkin")
+        // Required to retry connecting to the configuration service when it is not available at startup
         compile("org.springframework.retry:spring-retry")
 
         testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
 
-        itestCompile project(":thule-gateway-config")
+        itestCompile project(":thule-email-config")
+        testCompile("com.bitmechanic:dumbster:1.9.0.2")
 
-        ctestCompile project(":thule-gateway-config")
-        ctestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
+        ctestCompile project(":thule-email-config")
 
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
-        dtestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
     }
 }
