--- a/thule-cloud/build.gradle
+++ b/thule-cloud/build.gradle
@@ -7,8 +7,6 @@ buildscript {
 
 plugins {
     id "com.github.ben-manes.versions" version "0.20.0" apply(false)
-    id "com.palantir.docker" version "0.20.1" apply(false)
-    id "org.sonarqube" version "2.6.2" apply(false)
     id "org.springframework.boot" version "2.0.3.RELEASE" apply(false)
 }
 
@@ -44,18 +42,17 @@ project("thule-cloud-service") {
 
     // Plugins
     apply plugin: "com.github.ben-manes.versions"
-    apply plugin: "com.palantir.docker"
     apply plugin: "io.spring.dependency-management"
     apply plugin: "java"
-    apply plugin: "jacoco"
-    apply plugin: "org.sonarqube"
     apply plugin: "org.springframework.boot"
     apply plugin: "maven-publish"
 
     // Standard Thule gradle plugin config
     apply from: "${rootDir}/../gradle/build-config.gradle"
 
-    // Non-standard Thule gradle plugin config
+    // Non-standard GoHenry gradle plugin config
+    bootJar.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
+    jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 
     // Dependencies
     dependencyManagement {
