--- a/thule-admin/thule-admin-service/src/dtest/docker/thule-admin-docker-tests/docker-compose.yml
+++ b/thule-admin/thule-admin-service/src/dtest/docker/thule-admin-docker-tests/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 9092:8080 # Required to allow docker tests to call the restful api
     volumes:
-      # Since we are not using the config service to provide spring config, we add the config to the
+      # Since we are not using the configuration service to provide spring config, we add the config to the
       # docker containers file system in a standard spring boot location that spring boot uses to search for the config by default
       - thule-admin-config:/config
 
