Added management endpoint config for use by admin service

--- a/thule-discovery/thule-discovery-config/src/main/resources/config/application.yml
+++ b/thule-discovery/thule-discovery-config/src/main/resources/config/application.yml
@@ -22,6 +22,16 @@ logging:
     uk.co.serin.thule: trace
     org.springframework: info
 
+# Management endpoint configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
+
 # Spring boot configuration
 spring:
   sleuth:
