--- a/thule-people/thule-people-config/src/main/resources/config/application.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application.yml
@@ -25,6 +25,16 @@ logging:
     org.springframework: info
     uk.co.serin: trace
 
+# Management endpoint configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
+
 # Spring boot configuration
 spring:
   application:
