--- a/thule-gateway/thule-gateway-config/src/main/resources/config/application.yml
+++ b/thule-gateway/thule-gateway-config/src/main/resources/config/application.yml
@@ -20,6 +20,16 @@ logging:
     uk.co.serin.thule: trace
     org.springframework: info
 
+# Management endpoint configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
+
 # Spring boot configuration
 spring:
   application:
