Upgraded spring cloud from Finchley.RELEASE to Finchley.SR1

--- a/thule-cloud/build.gradle
+++ b/thule-cloud/build.gradle
@@ -59,7 +59,7 @@ project("thule-cloud-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1")
         }
     }
 
