--- a/thule-discovery/build.gradle
+++ b/thule-discovery/build.gradle
@@ -46,7 +46,7 @@ project("thule-discovery-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1")
         }
     }
 
