--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -56,7 +56,7 @@ project("thule-people-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1")
         }
     }
 
