--- a/thule-configuration/build.gradle
+++ b/thule-configuration/build.gradle
@@ -83,7 +83,7 @@ project("thule-configuration-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1")
         }
     }
 
